# global-11x

./: .gitignore  README.md  appveyor.yml  config.lua  config.lua.dist  gdb_config  schema.sql  start.sh  vcpkg.json
.github/workflows/: linux-build.yml
data/: global.lua
data/XML/: admin.xml  bestiary.xml  charm.xml  events.xml  familiars.xml  groups.xml  imbuements.xml  mounts.xml  outfits.xml  prey.xml  skillstages.xml  stages.xml  store.xml  towns.xml  vocations.xml
data/actions/: actions.xml
data/chatchannels/: chatchannels.xml
data/creaturescripts/: creaturescripts.xml
data/events/: events.xml
data/globalevents/: globalevents.xml
data/items/: items.otb  items.xml
data/lib/: autoloot.lua  dailyRewardLib.lua  guild.lua  libs.lua  rewardboss.lua
data/logs/: .gitignore
data/migrations/: 0.lua  1.lua  10.lua  11.lua  12.lua  13.lua  14.lua  15.lua  16.lua  17.lua  18.lua  19.lua  2.lua  20.lua  21.lua  22.lua  23.lua  24.lua  25.lua  26.lua  27.lua  28.lua  29.lua  3.lua  30.lua  31.lua  32.lua  33.lua  34.lua  35.lua  36.lua  37.lua  38.lua  4.lua  40.lua  5.lua  6.lua  7.lua  8.lua  9.lua
data/modules/: modules.xml
data/monster/: monsters.xml
data/movements/: movements.xml
data/npc/: A Bearded Woman.xml  A Beautiful Girl.xml  A Beggar.xml  A Behemoth.xml  A Confused Frog.xml  A Dark Priestess.xml  A Dead Bureaucrat1.xml  A Dead Bureaucrat2.xml  A Dead Bureaucrat3.xml  A Dead Bureaucrat4.xml  A Dragon Lord.xml  A Dragon Mother.xml  A Drillworm.xml  A Dwarven Ghost.xml  A Frog.xml  A Fugitive.xml  A Ghostly Guardian.xml  A Ghostly Knight.xml  A Ghostly Woman Ghostland.xml  A Ghostly Woman.xml  A Goblin Exile.xml  A Grumpy Cyclops.xml  A Lost Basher.xml  A Lost Husher.xml  A Lost Soul.xml  A Lost Thrower.xml  A Majestic Warwolf.xml  A Nightmare Scion.xml  A Prisoner.xml  A Wyrm.xml  (+867 more)
database/: schema.sql
engine/: CMakeLists.txt
engine/cmake/: FindCrypto++.cmake
engine/proto/: appearances.proto  generate.sh  shared.proto
engine/src/: CMakeLists.txt  account.cpp  account.h  actions.cpp  auras.h  backup.cpp  ban.cpp  bed.cpp  bestiary.cpp  bestiary.h  charm.cpp  charm.h  combat.cpp  combat.h  condition.cpp  condition.h  configmanager.cpp  configmanager.h  connection.cpp  connection.h  consolemanager.cpp  consolemanager.h  const.h  container.cpp  container.h  creature.cpp  creature.h  creatureevent.cpp  database.cpp  database.h  databasemanager.cpp  decay.cpp  definitions.h  depotchest.cpp  depotchest.h  depotlocker.cpp  depotlocker.h  enums.h  events.cpp  events.h  (+118 more)
engine/src/protobuf/: appearances.pb.cc  appearances.pb.h  shared.pb.cc  shared.pb.h
engine/vc14/: settings.props  theforgottenserver.vcxproj
engine/vc17/: theforgottenserver.vcxproj
util/: Autoloot SQL.txt  SQL Autoloot Vankk  VIP Days SQL.txt  check.lua  login.php
(+1859 files in other folders)
